--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -23,11 +23,11 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772407.md#1" target="_blank">2019年来台旅客达1184万人次 历史新高</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772407.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/421052-150x120.jpg" align ="left"></a>观光局6日公布2019年全年来台旅客人数，共有1,184万人次，较2018年成长7%，写下历史新高。观光局表示，在世界各国竞争激烈的观光市场环境，台湾稳定争取更多样客源，朝增加国际行销管道、扩大跨国跨域跨业合作等两大方向积极布局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772758.md#1" target="_blank">前日产董事长戈恩离奇潜逃 更多细节曝光</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NG2SM-150x120.jpg" align ="left"></a>日产前董事长戈恩（Carlos Ghosn）2019年底从日本弃保潜逃。这个称得上是大片级的神秘潜逃不仅令日本震惊，而且也引发全球关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11770649.md#1" target="_blank">大陆网友填歌赞川普：全世界的好公仆</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11770649.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1189870194-150x120.jpg" align ="left"></a>美国总统川普（特朗普）授命美军击毙伊朗恐怖分子头目索莱马尼（Qassim Soleimani），不少带网友发声表支持，甚至传唱歌曲赞川普，但很快被删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11778525.md#1" target="_blank">每日三退声明精选（2020/01/08）</a><br></h3>“八九? 六四”期间，我曾经在北京部队工作，目睹了中共军队屠杀学生的冰山一角：军队用坦克碾压了不肯离开天安门广场的示威学生后，广场地面上到处是学生尸体和学生的遗物；军人用帆布把那些遗物兜走；用直升机把学生遗体运走；然后几十辆消防车过来冲洗天安门广场，掩盖血腥；不准任何人讲出实情，否则军法严惩（让你消音、消失，什么都干的出来）。我现在退休退伍几十年了，今天才敢.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 11:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11778306.md#1" target="_blank">西藏暴雪湖南暴雨 大陆多地现雨雪天气</a><br></h3>新年伊始，中国大陆再迎第二波雨雪天气。第一波已于1月7日暂停，但8日多个地区出现暴雪、暴雨。据中国天气网消息，从今日（9日）开始，第二轮大范围雨雪天气将拉开帷幕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 9:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/8/n11776079.md#1" target="_blank">每日三退声明精选（2020/01/07）</a><br></h3>本人年少时曾加入少先队和共青团，虽然已经过去很多年，但回想起来，确实证明了这是一个邪恶的政权、体制。你不加入这个组织，就会被孤立、排斥。它让人从小学说假话，做违心的事情，而且理所应当理直气壮。我也很欣慰，后来一直没有加入共产党，可以说抵御了利益前程的诱惑，我一直坚信，这辈子该咋样咋样，我不会为了更多的前程、额外的利益而去入党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 12:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/7/n11773714.md#1" target="_blank">每日三退声明精选（2020/01/06）</a><br></h3>我是一个年近古稀的老人了，经历了文化大革命，也被共产党迫害过，但是由于环境闭塞，受党文化影响，一直没有看清共匪的邪恶，现在经历过很多大法的神奇事情，渐渐理解了无神论是邪恶，现在自愿退出共产党的少先队组织，希望更多的人能认清共产邪党的邪恶，与它划清界限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11769417.md#1" target="_blank">因应武汉肺炎 香港启动“严重应变级别”</a><br></h3>武汉爆发疑似萨斯疫情，大陆社交媒体疯传后官方再补发公告，短短三天个案从27例飙升44例。香港近期到过武汉后发热、呼吸道感染及肺炎症状入院治疗有8人。港澳应对升级，香港启动“严重应变级别”。专家批北京政府处理失当，后果严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11768943.md#1" target="_blank">安徽淮南男子杀害女友藏尸行李箱 被判死刑</a><br></h3>近日，安徽淮南男子刘某杀害女友藏尸行李箱一案宣判，刘某一审被判处死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11768961.md#1" target="_blank">广东新生女婴被装袋挂公厕门把手 父母失踪</a><br></h3>1月1日，广东省梅州市一个公厕里，有民众发现厕所的门把手上挂着一袋东西，里面竟装着一个熟睡的小女婴。袋中还有一件成人衣服，但没有任何关于女婴信息的字条。经检查，女婴没有任何异常，身体也无畸形情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11768811.md#1" target="_blank">因手机被没收 西安高中生将老师杀害</a><br></h3>1月2日，陕西省西安市第66中学发生一起刑事案件，该校女教师周某娟被高三学生李某伤害致死。据了解，李某因在晚自习期间玩手机，被值班老师金某发现并予以没收。李某两次索要手机无果，在第三次进到办公室后，将另一名老师周某娟伤害致死，之后李某翻出学校大门逃离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/ncid282_4.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/ncid282_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_4.htm">http://www.epochtimes.com/gb/ncid282_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
