--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795934.md#1" target="_blank">王友群：吴花燕因贫去世 赖小民一房藏2亿</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795934.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8ad5fdd9ed9d103f27d08838c8dbd987-600x400-2-150x120.jpg" align ="left"></a>近日，大陆两则新闻很轰动：
+
+1月13日下午，体重仅43斤的贵州女大学生吴花燕去世了，年仅24岁。她因贫困曾用糟辣椒拌白米饭吃了5年。她在一首诗中写着自己的梦想：“我将回到云贵高原……在那里会有一艘丰衣足食的小船，带我驶向远方。”
+1月13日晚上，中共央视播出的中纪委电视专题片中，中国华融资产管理股份公司原党委书.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 7:10 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796197.md#1" target="_blank">周晓辉：党章放床头可笑 中南海黔驴技穷</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796197.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1211290826301497-600x400-1-150x120.jpg" align ="left"></a>消息称习近平周围多专事奉迎的庸才，而那些有能力的团派大员多是出工不出力。这是否意味着面对着诸多的困境，不想改弦更张且想不出可以统一全党手段的中南海已经黔驴技穷了呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:45 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796087.md#1" target="_blank">洪微：美军公开特战部署应对中共</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/37589763712_0f51f8aa4d_h-1-150x120.jpg" align ="left"></a>近日，美国陆军部长瑞安·麦卡锡（Ryan McCarthy）在华盛顿公开了美军在太平洋的最新特战部署计划，称“多领域任务部队”（Multi-Domain Task Forces）预计在接下来的两年内部署。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 3:49 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794220.md#1" target="_blank">袁斌：贫困女生与贪腐高官 朱门酒肉臭当代版</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Untitled2-600x400-3-150x120.jpg" align ="left"></a>都生活在贵州，把刚刚去世的贫困女生吴花燕与日前被曝光的贵州省副省长王晓光放在一块对比，两人的境遇整个就是“朱门酒肉臭，路有冻死骨”的当代版！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 10:16 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794484.md#1" target="_blank">程晓容：中共最新反腐电视片说明什么？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794484.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/160705084919100615-600x398-1-150x120.jpg" align ="left"></a>中共制作的反腐节目自曝其丑恶，党媒称之为“回应党内关切和人民群众期盼”。其实，党内没有关切，只有绝望。人民的期盼是：中共解体、下台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 5:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794756.md#1" target="_blank">夏小强：杀死闯进家中的暴徒是正当防卫吗？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794756.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1920x1280_812421530952-600x400-1-150x120.jpg" align ="left"></a>那么，宋立英杀死闯入家中，是否属于防卫过当吗？他应该被判刑吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 4:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794615.md#1" target="_blank">陈思敏：中美签署第一阶段贸协 中共2点惨败</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1180494181-1-600x400-150x120.jpg" align ="left"></a>中美定于美东时间周三（15日）在白宫签署第一阶段贸易协议。14日，美国贸易代表莱特希泽（Robert Lighthizer）和财政部长姆钦（Steven Mnuchin）发表联合声明表示，美中双方并没有在第一阶段贸易协议同意进一步削减关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 4:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794324.md#1" target="_blank">【名家专栏】教师须慎重处理有争议的问题</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_34649832_Subscription_L-150x120.jpg" align ="left"></a>上个月，一位大温哥华高中（Metro Vancouver high school）的老师据称给学生们看了一部Netflix的纪录片，名为《别惹猫咪：追捕虐猫者》（Don't f*** With Cats，又名：猫不可杀不可辱）。这部被评为“成年”限制级的纪录片，生动地描述了已被判有罪的杀人犯卢卡·玛格诺塔（Luka M.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 4:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794198.md#1" target="_blank">文武：国民党的前途与命运</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8c1da188900d6613a9afa5f4e3e5fb62-600x400-1-150x120.jpg" align ="left"></a>国民党这次在台湾大选中的失败对国民党来说不是坏事而是好事，因为从党派利益的角度上来说，与中国共产党有仇的不是台湾的民进党而是中国国民党，这次在台湾大选的过程中，各党派在竟选造势的主会场上，国民党是举满了中华民国的国旗，国民党的中华民国万岁的口号喊遍全场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793807.md#1" target="_blank">方能达：祝贺《大纪元时报》读者日增</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793807.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/190401110808100615-600x400-150x120.jpg" align ="left"></a>残暴并且阴险，中共是个邪党，
 满口仁义道德，满腹男盗女娼，
@@ -26,11 +37,9 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791025.md#1" target="_blank">王友群：蔡英文胜选获国际赞赏的五个原因</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791025.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM6GV-1-600x400-1-150x120.jpg" align ="left"></a>1月11日，蔡英文以台湾直选总统史上最高票数成功连任，美国等70多个国家、国际组织的政要纷纷表示热烈祝贺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 2:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789532.md#1" target="_blank">陈思敏：中国足球资金寒冬曝经济实情</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789532.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/VCG111183534895-600x400-2-150x120.jpg" align ="left"></a>据报导，中国2019年第四季度和全年GDP数据将于本周五（17日）公布。尽管2019年第三季度增速放缓至6%，中共发改委主任兼统计局局长宁吉喆11日仍预告：去年GDP增长6%到6.5%的目标，是能够实现的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 6:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789989.md#1" target="_blank">程晓容：60国贺蔡英文胜选 中共输在哪里？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789989.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49fb45959fb1153b0c445be73d68033d-1-150x120.jpg" align ="left"></a>国际社会对蔡英文的祝贺即是对自由民主的呼应，对台湾人民勇气的赞赏。各方喝彩汇成一个强大的信号，直击中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 5:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11788943.md#1" target="_blank">文武：民进党选举的胜利在于选择认清中共邪恶</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11788943.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5522-600x400-2-150x120.jpg" align ="left"></a>台湾总统和立委的选举已经结束了，蔡英文以高票连任台湾总统，民进党也以立委过半取得完全执政。这与一年前台湾九合一选举形成完全反转，为什么仅仅一年的时间民进党就实现了完全翻转，难道民进党在这仅仅的一年时间里做出了什么特别的成绩了吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:10 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788664.md#1" target="_blank">东方觉：年终奖竟是“免裁券” “花式裁员”伤人心</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788664.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/903151931542054-600x400-1-150x120.jpg" align ="left"></a>已至年末，许多员工盼望能领到一份年终奖金，回家团圆，过个平安年。可是希望越大，失望越大，现在年终奖不仅越来越“缩水”，而且变得越来越“奇葩”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 8:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788643.md#1" target="_blank">王赫：习近平可识“桃花源中人”？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>1月8日，中共召开“不忘初心、牢记使命”主题教育总结大会，习近平在讲话中向全党喊话：与时俱进，不能做“不知有汉，无论魏晋”的桃花源中人。习近平这里引用“桃花源中人”一词，完全是对这个词的错解、误用。当然，这也不能全怪习近平，因为这个词在中共党史中有特定的含义，毛、邓都用过，习也是照搬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:24 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788200.md#1" target="_blank">张林：从波斯帝国到让全世界嘲笑的当代伊朗</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788200.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF0C3-1-600x400-1-1-1-150x120.jpg" align ="left"></a>伊朗将军苏里曼尼是联合国通辑的恐怖分子，美国将其斩首之后，伊朗统治集团既绝望又恐惧，演出了一幕幕丑剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 5:57 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11787934.md#1" target="_blank">李靖宇：台湾大选 中共成蔡英文“最大助选员”</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11787934.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49fb45959fb1153b0c445be73d68033d-150x120.jpg" align ="left"></a>事实上，民进党大胜、国民党惨败的主要原因即是台湾大选背后的“中共因素”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 9:18 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796267.md#1" target="_blank">夏林：中共新年挨的两记重拳</a><br></h3>中共从2019年起，明显走霉运。而2020年刚到，中共又意外地被重击两拳。左钩拳是美国政府斩首伊朗二号恐怖分子苏莱曼尼；右钩拳是台湾大选，对中共强硬的蔡英文大胜。
+
+去年12月30日发生了有伊朗恐怖分子苏莱曼尼参与策动的包围美国驻伊拉克使馆事件。美国政府迅速平息这一事件之后，目标锁定了在后面参与的伊朗重要人物苏莱曼.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794273.md#1" target="_blank">祝君安：妖共畜心剖</a><br></h3>保卫苏维埃，国难复独裁
 外蒙媚妖主，民国驱海台
 民主逐鹿去，专制伴谎来
@@ -47,27 +56,5 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791226.md#1" target="_blank">超薄微热管：可携式电子产品散热应用</a><br></h3>小型化和高密度封装电子产品，需要紧凑且具高效散热部件。扁平超薄微热管非常适合高功率和有限空间散热，目前已经广泛研究并应用在可携式电子产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 4:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790392.md#1" target="_blank">中立：中共与民为敌 期望台湾民主统一大陆</a><br></h3>中共以一党极权独裁，拒绝民主，拒绝民意，实乃以人民为敌，以民主自由为敌。北京当局图谋以巩固和加强中共长存的的动机为最终目的，就是巩固中共一党长期极权独裁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 6:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789473.md#1" target="_blank">李铭：泛滥的酷刑迫害</a><br></h3>明慧网近日报导，法轮功学员陈淑英、周亚芳，目前在辽宁女子监狱遭受非人迫害。陈淑英的手脚被铐在床杆上，不给铺床垫，不给被盖，甚至大小便都不给解铐；周亚芳在寒冷的冬天就只能穿一件单衣、单裤，脚穿一双板鞋，没穿袜子，每天都被“包夹犯人”折磨的痛苦不堪。陈淑英、周亚芳的遭遇，印证了历经漫漫二十年，中共的迫害政策仍继续执行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 1:19 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11788914.md#1" target="_blank">苦胆：一张选票的距离</a><br></h3>
-
-有识之士掷出货真价实的金句：
-
-“台湾与香港就是一张选票的距离”。
-中国若在倒退的路上转身折回，
-那它与民主国家也是一张选票的距离。
-
-曾经的“共和”得而复失，声声叹息……
-要跨越一张选票的距离谈何容易，
-国人流血流泪走了一百多年仍未跨越，
-连用上越江大桥、海底隧道都跨不过去。
-
-这选票是.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:31 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11788867.md#1" target="_blank">陆客：致习近平的一封信</a><br></h3>习近平先生：
-
- 您好。我是一位中国公民，请允许我以平等的身份与您进行一些交流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:16 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788618.md#1" target="_blank">吐为快：贺中华民国之民主光大</a><br></h3>阋墙御侮抗匪渗，忭舞自由致尧舜；
-海内属望树矜式，陆民深热羡荣尊；
-安黎衽席非一隅，光复禹域是重任；
-献祝民国固金瓯，但愿陆魁念苍生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 6:43 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/7/n11775339.md#1" target="_blank">夏林：惯偷的新年决心</a><br></h3>2019年飞快过去，转眼已是2020年。在除旧迎新之际，很多媒体和机构都要举行一番选世界大新闻和最著名词汇之类的活动。大家普遍认为2019年最大的新闻，是香港市民从“反送中”开始，发展到“五大诉求”的持续抗争。最著名的词汇，在英国《金融时报》专栏作家弗鲁哈尔（Rana Foroohar）看来，则是“脱钩”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 4:59 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
